src/snapshots/rlox__test_runtime__function_call_args.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        fun show(n) {\n            print n;\n        }\n\n        show(1);\n        \")"
---
stdout:
1


stderr:


