src/snapshots/rlox__test_runtime__function_declaration.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        fun foo() {}\n\n        print foo;\n        \")"
---
stdout:
<function foo>


stderr:


