src/snapshots/rlox__test_runtime__function_out_of_scope.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        {\n            fun foo() {}\n        }\n        foo();\n        \")"
---
stdout:


stderr:
Error: Undefined variable: foo
   ╭─[<unknown>:3:2]
   │
 5 │         foo();
   │         ───  
   │               
───╯


