src/snapshots/rlox__test_runtime__global_and_local_scope.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        var a = 1;\n        var b = 2;\n        {\n            print a;\n            print b;\n            var a = 3;\n            print a;\n        }\n        print a;\n        \")"
---
stdout:
1
2
3
1


stderr:


