src/snapshots/rlox__test_runtime__globals.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        var answer = 42;\n        print answer;\n        \")"
---
stdout:
42


stderr:


