src/snapshots/rlox__test_runtime__greater_equal.snap
---
source: src/vm.rs
expression: "crate::util::mock_interpret(\"print 1 >= 1; print 0 >= 1; print 2 >= 1;\")"
---
stdout:
true
false
true


stderr:


