src/snapshots/rlox__test_runtime__if_is_scope.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        var a;\n        if true {\n            var a = 1;\n            print a;\n        }\n        print a;\n        \")"
---
stdout:
true
nil


stderr:


