src/snapshots/rlox__test_runtime__if_sequence.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        if false {\n            print 1;\n            print 2;\n            print 3;\n            print 4;\n            print 5;\n            print 6;\n        }\n        if true {\n            print 1;\n            print 2;\n        }\n        \")"
---
stdout:
1
2


stderr:


